# chimeras

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
apps/dioxus-demo/: Cargo.toml
apps/dioxus-demo/assets/: app.css
apps/dioxus-demo/src/: main.rs
apps/egui-demo/: Cargo.toml
apps/egui-demo/src/: main.rs
crates/cameras/: Cargo.toml  README.md
crates/cameras/examples/: autofocus.rs  discover.rs  sharpest.rs
crates/cameras/src/: analysis.rs  backend.rs  camera.rs  convert.rs  discover.rs  error.rs  lib.rs  linux.rs  macos.rs  pump.rs  source.rs  types.rs  unknown.rs  windows.rs
crates/cameras/src/decode/: macos.rs
crates/cameras/tests/: discover_live.rs
crates/dioxus-cameras/: Cargo.toml  README.md
crates/dioxus-cameras/src/: discover.rs  lib.rs
crates/egui-cameras/: Cargo.toml  README.md
crates/egui-cameras/src/: discover.rs  lib.rs
demo/: Cargo.toml
demo/assets/: app.css  preview.js
demo/src/: main.rs
examples/: capture.rs  list.rs
src/: backend.rs  camera.rs  convert.rs  decode.rs  error.rs  lib.rs  linux.rs  macos.rs  monitor.rs  rtsp.rs  types.rs  unknown.rs  windows.rs
src/decode/: macos.rs  windows.rs
src/macos/: delegate.rs  enumerate.rs  monitor.rs  permission.rs  session.rs
