[workspace]
members = ["apps/*", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.1"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
edition = "2024"
rust-version = "1.85"
homepage = "https://github.com/matthewjberger/cameras"
repository = "https://github.com/matthewjberger/cameras"
license = "MIT OR Apache-2.0"
