[package]
name = "chimeras-demo"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chimeras = { path = "..", features = ["rtsp"] }
dioxus = { version = "0.7.3", features = ["desktop"] }
image = { version = "0.25", default-features = false, features = ["png"] }
chrono = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
